# PictureSorter

./: .gitignore  .gitignore.swp  CMakeLists.txt  info.txt  notes.txt
include/: Collection.hpp  GPU.hpp  Simularity.hpp  filesystem.hpp
src/: Cluster.cpp  Cluster.hpp  CompareStore.hpp  General.hpp  Operations.cpp  Operations.hpp  Picture.cpp  Picture.hpp  main.cpp  vector_add.cl
src/Sim/: CMakeLists.txt  Sim.pc.in
src/Sim/include/: Collection.hpp  FileFormat.hpp  GPU.hpp  ImageData.hpp  Settings.hpp  Simularity.hpp  md5.h
src/Sim/src/: Collection.cpp  ImageData.cpp  md5.cpp
src/Sim/test/: CMakeLists.txt  image_data.cpp
src/fJPG/: CMakeLists.txt  fJPG.pc.in
src/fJPG/include/: BitItr.hpp  DataCollection.hpp  DuIterator.hpp  HuffTable.hpp  QuadTable.hpp  Util.hpp  fJPG.hpp
src/fJPG/src/: BitItr.cpp  Convert.cpp  DuIterator.cpp  FreqenzTransform.cpp  HuffTable.cpp  QuadTable.cpp  Util.cpp  dummy.cpp  fJPG.cpp
src/fJPG/test/: .test.py.un~  CMakeLists.txt  huffTable.data  huffTable.data.bak  t1.pgm.res  t2.pgm  t2.pgm.res  t3.pgm  t3.pgm.res  t4.pgm.res  t5.pgm.res  test.cpp  test.py  test.py~  testDecode.cpp  testFrequenz.cpp  testHuff.cpp
